crates/core/tests/snapshots/container_finalize_test__container_finalize__named_struct__supports_nested.snap
---
source: crates/core/tests/container_finalize_test.rs
expression: pretty(container.impl_partial_finalize())
---
fn finalize(
    self,
    context: &Self::Context,
) -> std::result::Result<Self, schematic::ConfigError> {
    let mut partial = Self::default();
    if let Some(layer) = Self::default_values(context)? {
        partial.merge(context, layer)?;
    }
    partial.merge(context, self)?;
    if let Some(layer) = Self::env_values()? {
        partial.merge(context, layer)?;
    }
    if let Some(layer) = partial.a {
        partial.a = Some(layer.finalize(context)?);
    }
    if let Some(layer) = partial.b {
        partial.b = Some(transform_config(layer.finalize(context)?, context)?);
    }
    if let Some(layer) = partial.c {
        partial.c = Some(layer.finalize(context)?);
    }
    if let Some(layer) = partial.d {
        partial.d = Some(
            transform_config(
                {
                    let layer = Arc::unwrap_or_clone(layer);
                    Arc::new(layer.finalize(context)?)
                },
                context,
            )?,
        );
    }
    Ok(partial)
}
