crates/core/tests/snapshots/container_finalize_test__container_finalize__named_struct__supports_standard.snap
---
source: crates/core/tests/container_finalize_test.rs
expression: pretty(container.impl_partial_finalize())
---
fn finalize(
    self,
    context: &Self::Context,
) -> std::result::Result<Self, schematic::ConfigError> {
    let mut partial = Self::default();
    if let Some(layer) = Self::default_values(context)? {
        partial.merge(context, layer)?;
    }
    partial.merge(context, self)?;
    if let Some(layer) = Self::env_values()? {
        partial.merge(context, layer)?;
    }
    if let Some(layer) = partial.c {
        partial.c = Some(transform_string(layer, context)?);
    }
    if let Some(layer) = partial.f {
        partial.f = Some(transform_vec(layer, context)?);
    }
    Ok(partial)
}
